# ConanCuda

./: .gitignore  .tool-versions  CMakeLists.txt  README.md  conan_host_profile  conandata.py  conandata.yml  conanfile.py  helpers.cmake  make.sh
src/: CMakeLists.txt  CMakeUserPresets.json  main.cu
tools/: conan
